[gd_scene load_steps=5 format=2]

[ext_resource path="res://game_over.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/pixeboy.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 768.0
margin_bottom = 240.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 768.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerLabel" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 205.0
margin_right = 563.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "!! WE HAVE A WINNER !!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 768.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerName" type="Label" parent="VBoxContainer/CenterContainer2"]
margin_left = 241.0
margin_right = 527.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 0.996078, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "<Player_Name>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerButton" type="VBoxContainer" parent="."]
margin_top = 240.0
margin_right = 768.0
margin_bottom = 480.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainerButton"]
margin_top = 103.0
margin_right = 768.0
margin_bottom = 137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="VBoxContainerButton/CenterContainer"]
margin_left = 323.0
margin_right = 455.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Retry"

[connection signal="pressed" from="VBoxContainerButton/CenterContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
